--- a/home.html
+++ b/home.html
@@ -51,6 +51,13 @@
             <a href="investment-programs.html">INVESTMENT PROGRAMS</a>
             <a href="why-choose-us.html">WHY CHOOSE US</a>
         </nav>
+
+        <nav class="nav-4">
+            <img src="./photos/index-removebg-preview.png" alt="logo" height="40px">
+
+            
+               <a href="#" onclick="faButton()"><i class="fa fa-bars menu-toggle-btn"></i></a>
+        </nav>
     
         <section id="section1">
            <p> <font color='goldenrod'>BECOME</font> <font color='goldenrod'>A</font> <font color='white'> PART</font> <font color='goldenrod'>OF</font> <font color='goldenrod'>THE</font> <font color='white'>IQ</font> <font color='white'>OPTION</font> <font color='white'>TRADE</font> <font color='goldenrod'>GROUP</font></p>
