--- a/investment-programs.html
+++ b/investment-programs.html
@@ -51,6 +51,13 @@
             <a href="investment-programs.html"  id="important">INVESTMENT PROGRAMS</a>
             <a href="why-choose-us.html">WHY CHOOSE US</a>
         </nav>
+
+        <nav class="nav-4">
+            <img src="./photos/index-removebg-preview.png" alt="logo" height="40px">
+
+            
+               <a href="#" onclick="faButton()"><i class="fa fa-bars menu-toggle-btn"></i></a>
+        </nav>
      </header>
     
      <aside>INVESTMENT PACKAGES</aside>
