--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -158,7 +158,7 @@
         document.getElementById('major-footer').innerHTML = dd.getFullYear() + ' ' + '&copy All Rights Reserved';
     </script>
 
-    <script>
+    <!-- <script>
         function faButton() {
          let nav3 = document.getElementsByClassName('nav-3');
             
@@ -171,7 +171,7 @@
     }) 
          }
 
-    </script>
+    </script> -->
 
 <!--     
 
