--- a/investment-programs.html
+++ b/investment-programs.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="investment-programs.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <style>
         #important{
             border-bottom: 2px solid goldenrod;
