--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
         </nav>
     
         <section id="section1">
-           <p> <font color='goldenrod'>BECOME</font> <font color='goldenrod'>A</font> <font color='white'> PART</font> <font color='goldenrod'>OF</font> <font color='goldenrod'>THE</font> <font color='white'>IQ</font> <font color='white'>OPTION</font> <font color='white'>TRADE</font> <font color='goldenrod'>GROUP</font></p>
+           <p> <font color='goldenrod'>BECOME</font> <font color='white'>A</font> <font color='goldenrod'> PART</font> <font color='white'>OF</font> <font color='goldenrod'>THE</font> <font color='white'>IQ</font> <font color='goldenrod'>TRADERS</font> <font color='white'>GROUP</font></p>
         </section>
     </header>
 
@@ -71,7 +71,7 @@
 
         <div class="main-1">
             <div class="main-1-1">
-                <p>IQ Option Trade, is an Artificial Intelligence Asset Management Company that uses the advance AI software tools to trade in Forex and Cryptocurrency market to generate income for our investors. We are using deep learning techniques to train large neural networks to recognise patterns in data</p>
+                <p>IQ Traders, is an Artificial Intelligence Asset Management Company that uses the advance AI software tools to trade in Forex and Cryptocurrency market to generate income for our investors. We are using deep learning techniques to train large neural networks to recognise patterns in data</p>
             </div>
             <div class="main-1-2">
                 <p>Unstructured data learning form social media posts and news articles can provide unparalleled insight for developing trading strategies and profitable returns on investments. Our Software can use large amounts of historic information when analysing trading data in real-time, providing us with bettter insights into the market and helping us shape our trading strategy according to the current market’s volatility</p>
@@ -134,7 +134,7 @@
         <p><em>
             "Every trader has strengths and weaknesses. Some are good holders of winners but may hold their losers a little too long. Others may cut their winners a little short but are quicke to take their losses. As long as you stick to your own style, you get the good and bad in your own approach."
         </em><br>
-        FRANK WAYNE - (CEO IQ OPTION TRADE)</p> 
+        FRANK WAYNE - (CEO IQ TRADERS)</p> 
     </div>
 
 <section id="section2">
