--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -101,7 +101,7 @@
         
             <div>
                 <h3><font color='goldenrod'>HELP & SUPPORT</font></h3>
-                <p>TERMS AND CONDITIONS <br> ANTI SPAM POLICY <br> PRIVACY POLICY <br> RISK CLOSURE <br> REGISTER <br> SIGN IN</p>
+                <p>TERMS AND CONDITIONS <br> ANTI SPAM POLICY <br> PRIVACY POLICY <br> RISK CLOSURE <br></p>
             </div>
         
             <div>
