--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             border-bottom: 2px solid goldenrod;
         }
     </style>
-    <title>Document</title>
+    <title>IQ TRADERS</title>
 </head>
 <body>
 
@@ -168,7 +168,10 @@
     <div id="footer">
         <div>
             <h3><font color='goldenrod'>QUICK LINKS</font></h3>
-            <p>HOME <br> ABOUT US <br> FAQS <br> CONTACT US</p>
+            <a href="home.html">HOME</a> <br>
+            <a href="#">ABOUT US</a> <br>
+            <a href="#">FAQS</a> <br>
+            <a href="https://wa.me/+19149289425?text=I-would-like-to-get-more-info-about-the-platform" target="_blank">CONTACT US</a>
         </div>
     
         <div>
