more changes were made in the pages

--- a/investment-programs.html
+++ b/investment-programs.html
@@ -112,7 +112,10 @@
         <div id="footer">
             <div>
                 <h3><font color='goldenrod'>QUICK LINKS</font></h3>
-                <p>HOME <br> ABOUT US <br> FAQS <br> CONTACT US</p>
+                <a href="home.html">HOME</a> <br>
+                <a href="#">ABOUT US</a> <br>
+                <a href="#">FAQS</a> <br>
+                <a href="https://wa.me/+19149289425?text=I-would-like-to-get-more-info-about-the-platform" target="_blank">CONTACT US</a>
             </div>
         
             <div>
