--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <header>
+    <header id="home">
         <nav class="nav-1">
             <iframe src="https://widget.coinlib.io/widget?type=horizontal_v2&amp;theme=dark&amp;pref_coin_id=1505&amp;invert_hover=no" scrolling="auto" marginwidth="0" marginheight="0" border="0" style="border:0;margin:0;padding:0;" width="100%" height="40px" frameborder="0"></iframe>
         </nav>
@@ -66,7 +66,7 @@
     </header>
 
 
-    <main>
+    <main id="know-more">
         <h1><font color='black'>ABOUT</font> <font color='gold'>US</font></h1>
 
         <div class="main-1">
@@ -168,8 +168,8 @@
     <div id="footer">
         <div>
             <h3><font color='goldenrod'>QUICK LINKS</font></h3>
-            <a href="home.html">HOME</a> <br>
-            <a href="#">ABOUT US</a> <br>
+            <a href="#home">HOME</a> <br>
+            <a href="#know-more">ABOUT US</a> <br>
             <a href="#">FAQS</a> <br>
             <a href="https://wa.me/+19149289425?text=I-would-like-to-get-more-info-about-the-platform" target="_blank">CONTACT US</a>
         </div>
