very lil change was added

--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -99,7 +99,7 @@
                 <a href="home.html">HOME</a> <br>
                 <a href="#">ABOUT US</a> <br>
                 <a href="#">FAQS</a> <br>
-                <a href="https://wa.me/+19149289425?text=I-would-like-to-get-more-info-about-the-platform" target="_blank">CONTACT US</a>>
+                <a href="https://wa.me/+19149289425?text=I-would-like-to-get-more-info-about-the-platform" target="_blank">CONTACT US</a>
             </div>
         
             <div>
