--- a/investment-programs.html
+++ b/investment-programs.html
@@ -14,7 +14,7 @@
             border-bottom: 2px solid goldenrod;
         }
     </style>
-    <title>Document</title>
+    <title>IQ TRADERS</title>
 </head>
 
 <body>
