--- a/investment-programs.html
+++ b/investment-programs.html
@@ -14,6 +14,7 @@
             border-bottom: 2px solid goldenrod;
         }
     </style>
+    <link rel="shortcut icon" href="./photos/index_removebg_preview_Czb_icon.ico" type="image/x-icon">
     <title>IQ TRADERS</title>
 </head>
 
