--- a/investment-programs.html
+++ b/investment-programs.html
@@ -141,7 +141,7 @@
         
             </div>
             <div>
-                <h3 style="visibility:hidden;">READINGS</h3>
+                <h3 style="visibility:hidden;" id="readings">READINGS</h3>
                 <p>
                     <font color='goldenrod'>$241.07B</font> <br>
                     MARKET CAP
