--- a/investment-programs.html
+++ b/investment-programs.html
@@ -45,8 +45,6 @@
                 Live Bitcoin price
             </p>
 
-            <a href="investment-programs.html">INVEST</a>
-
         </nav>
 
         <nav class="nav-3">
@@ -143,7 +141,7 @@
             <div>
                 <h3 style="visibility:hidden;" id="readings">READINGS</h3>
                 <p>
-                    <font color='goldenrod'>$241.07B</font> <br>
+                    <font color='goldenrod'>$241.07M</font> <br>
                     MARKET CAP
                 </p>
                 
