--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -127,7 +127,7 @@
             <div>
                 <h3 style="visibility:hidden;" id="readings">READINGS</h3>
                 <p>
-                    <font color='goldenrod'>$241.07B</font> <br>
+                    <font color='goldenrod'>$241.07M</font> <br>
                     MARKET CAP
                 </p>
                 
