changes in the investment page

--- a/investment-programs.html
+++ b/investment-programs.html
@@ -76,7 +76,9 @@
            <p>Easy to use</p>
            <p>Withdraw directly to your wallet</p>
            <a href="https://wa.me/+19149289425?text=I-would-like-to-invest-in-pack-1" target=”_blank”>INVEST</a>
+           <a href="https://flutterwave.com/pay/kzhbd2brds0t" target=”_blank” class="iwc">INVEST WITH CARD</a>
         </div>
+
         <div  id="pack2">
             <div>
            <h3><font color='goldenrod'>Pack 2</font></h3>
@@ -89,7 +91,9 @@
            <p>Easy to use</p>
            <p>Withdraw directly to your wallet</p>
            <a href="https://wa.me/+19149289425?text=I-would-like-to-invest-in-pack-2" target=”_blank”>INVEST</a>
+           <a href="https://flutterwave.com/pay/bwlewz6yb3wf" target=”_blank” class="iwc">INVEST WITH CARD</a>
         </div>
+
         <div  id="pack3">
             <div>
            <h3><font color='goldenrod'>Pack 3</font></h3>
@@ -102,7 +106,9 @@
            <p>Easy to use</p>
            <p>Withdraw directly to your wallet</p>
            <a href="https://wa.me/+19149289425?text=I-would-like-to-invest-in-pack-3" target=”_blank”>INVEST</a>
+           <a href="https://flutterwave.com/pay/hrzaelnfjgaf" target=”_blank” class="iwc">INVEST WITH CARD</a>
         </div>
+
      </section>
         
 
