--- a/investment-programs.html
+++ b/investment-programs.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="investment-programs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
     <style>
         #important{
@@ -174,12 +175,21 @@
         </div>
     
         <p style="background-color: black; margin-bottom: 0; color: white; text-align: center; font-weight: 600; padding-bottom: 1rem;" id="major-footer" ></p>
+
+        <i class="fas fa-chevron-circle-up button" onclick="scrollToTop()"></i>
     </footer>
 
 
     <script>
         let dd = new Date()
-        document.getElementById('major-footer').innerHTML = dd.getFullYear() + ' ' + '&copy All Rights Reserved'
+        document.getElementById('major-footer').innerHTML = dd.getFullYear() + ' ' + '&copy All Rights Reserved';
+
+        function scrollToTop() {
+        window.scrollTo({
+            top: 0,
+            behavior: "smooth"
+        })
+    }
     </script>
 
 </body>
