--- a/home.html
+++ b/home.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
     <style>
@@ -84,7 +83,7 @@
                 
             </div>
         </div>
-        <a href="#knowmore">KNOW MORE</a>
+        <a href="why-choose-us.html">KNOW MORE</a>
     </main>
 
     <aside>
