--- a/investment-programs.html
+++ b/investment-programs.html
@@ -109,8 +109,11 @@
            <a href="https://wa.me/+19149289425?text=I-would-like-to-invest-in-pack-3" target=”_blank”>INVEST</a>
            <a href="https://flutterwave.com/pay/hrzaelnfjgaf" target=”_blank” class="iwc">INVEST WITH CARD</a>
         </div>
-
      </section>
+
+     <aside>
+         <a href="https://flutterwave.com/pay/5cg3upgykdlm">INVEST DESIRED AMOUNT</a>
+     </aside>
         
 
     <footer>
