--- a/investment-programs.html
+++ b/investment-programs.html
@@ -111,9 +111,9 @@
         </div>
      </section>
 
-     <aside>
-         <a href="https://flutterwave.com/pay/5cg3upgykdlm">INVEST DESIRED AMOUNT</a>
-     </aside>
+     <main>
+         <a href="https://flutterwave.com/pay/5cg3upgykdlm" target="_blank">INVEST DESIRED AMOUNT</a>
+     </main>
         
 
     <footer>
