changes on the why choose us page

--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -66,12 +66,12 @@
      <aside>WHY CHOOSE US</aside>
 
      <section>
-        <div>
+        <div class="section-div">
             <h1>CORPORATE STRATEGY</h1>
             <p>Our team is charged with transforming our company to lead in an ever-changing world by providing business analysis and corporate strategy guidance, including informing management decision-making and communicating with external stakeholders</p>
         </div>
 
-        <div>
+        <div class="section-div">
             <h1>BUSINESS OPERATIONS</h1>
             <p>Our global network of operations professionls centralize knowledge, equip teams with data and technology, and provide the information needed to innovate and deliver for internal stakeholders and clients</p>
         </div>
@@ -80,12 +80,12 @@
 
     <section>
 
-        <div>
+        <div class="section-div">
             <h1>HUMAN RESOURCES</h1>
             <p>Our work focuses on attracting and developing a diverse workforce. We strive to make our company an inclusive place to work twhere every employee feels like they belong and can meaningfully contribute to advancing our purspose</p>
         </div>
 
-        <div>
+        <div class="section-div">
             <h1>INVESTMENTS</h1>
             <p>We are helping our clients solve their most important investment challenges and strive to deliver persistent, long term investment performance. Our investment professionals benefit from the resources of a world-class technology firm that is differentiated by a team approach, integrated research and risk management</p>
         </div>
