--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -43,9 +43,7 @@
                 63,971.68 <br>
                 Live Bitcoin price
             </p>
-
-            <a href="investment-programs.html">INVEST</a>
-
+            <!-- <ion-icon name="menu-sharp"></ion-icon> -->
         </nav>
         
         <nav class="nav-3" id="nav-3">
@@ -53,14 +51,6 @@
             <a href="investment-programs.html">INVESTMENT PROGRAMS</a>
             <a href="why-choose-us.html" id="important">WHY CHOOSE US</a>
         </nav>
-
-        <nav class="nav-4">
-            <img src="./photos/index-removebg-preview.png" alt="logo" height="40px">
-
-            
-               <a href="#" onclick="faButton()"><i class="fa fa-bars menu-toggle-btn"></i></a>
-        </nav>
-
      </header>
 
      <aside>WHY CHOOSE US</aside>
@@ -173,6 +163,8 @@
     }
     </script>
 
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!-- <script>
         function faButton() {
          let nav3 = document.getElementsByClassName('nav-3');
