--- a/home.html
+++ b/home.html
@@ -44,21 +44,15 @@
                 Live Bitcoin price
             </p>
 
-            <a href="investment-programs.html">INVEST</a>
+            <a href="investment-programs.html" id="invest">INVEST</a>
 
+            <!-- <ion-icon name="menu-sharp" id="btn" onclick="btn()"></ion-icon> -->
         </nav>
 
         <nav class="nav-3">
             <a href="home.html" id="important">HOME</a>
             <a href="investment-programs.html">INVESTMENT PROGRAMS</a>
             <a href="why-choose-us.html">WHY CHOOSE US</a>
-        </nav>
-
-        <nav class="nav-4">
-            <img src="./photos/index-removebg-preview.png" alt="logo" height="40px">
-
-            
-               <a href="#" onclick="faButton()"><i class="fa fa-bars menu-toggle-btn"></i></a>
         </nav>
 
         <nav class="nav-5">
@@ -246,7 +240,15 @@
             behavior: "smooth"
         })
     }
+
+    document.getElementById('btn').innerHTML = function btn() {
+        document.getElementsByClassName('nav-3').style.right = '0';
+        document.getElementsByClassName('nav-3').style.left = '0';
+    }
 </script>
+
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
