--- a/investment-programs.html
+++ b/investment-programs.html
@@ -45,20 +45,13 @@
                 63,971.68 <br>
                 Live Bitcoin price
             </p>
-
+            <!-- <ion-icon name="menu-sharp"></ion-icon> -->
         </nav>
 
         <nav class="nav-3">
             <a href="home.html">HOME</a>
             <a href="investment-programs.html"  id="important">INVESTMENT PROGRAMS</a>
             <a href="why-choose-us.html">WHY CHOOSE US</a>
-        </nav>
-
-        <nav class="nav-4">
-            <img src="./photos/index-removebg-preview.png" alt="logo" height="40px">
-
-            
-               <a href="#" onclick="faButton()"><i class="fa fa-bars menu-toggle-btn"></i></a>
         </nav>
      </header>
     
@@ -194,6 +187,9 @@
         })
     }
     </script>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
