--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
         </nav>
     
         <section id="section1">
-           <p> <font color='goldenrod'>BECOME</font> <font color='white'>A</font> <font color='goldenrod'> PART</font> <font color='white'>OF</font> <font color='goldenrod'>THE</font> <font color='white'>IQ</font> <font color='goldenrod'>TRADERS</font> <font color='white'>GROUP</font></p>
+           <p> <font color='goldenrod'>BECOME</font> <font color='white'>A</font> <font color='goldenrod'> PART</font> <font color='white'>OF</font> <font color='goldenrod'>THE</font> <font color='white'>IQ</font> <font color='goldenrod'>TRADERS</font></p>
         </section>
     </header>
 
