--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
 
     <div id="motivational">
         <p><em>
-            "Every trader has strengths and weaknesses. Some are good holders of winners but may hold their losers a little too long. Others may cut their winners a little short but are quicke to take their losses. As long as you stick to your own style, you get the good and bad in your own approach."
+            "Every trader has strengths and weaknesses. Some are good holders of winnings, but may hold their losses a little too long. Others may cut their winnings a little too short, but are quick to take their losses. As long as you stick to your own style, you get the good and bad in your own approach."
         </em><br>
         FRANK WAYNE - (CEO IQ TRADERS)</p> 
     </div>
@@ -183,8 +183,9 @@
                 <h3> <font color='goldenrod'>CONTACT US</font></h3>
                 <p>SUPPORT@IQOPTIONTRADE.COM <br> MON-SUN 24/7 <br> ADDRESS:</p>
                 <h4 style="margin-bottom: .3rem;"> <font color='goldenrod'>HEAD OFFICE:</font></h4>
-                <p style="margin-top: 0;"> Mannerheimintie 20 B,F1-00100, <br>
-                    Helsinki, Finland.
+                <p style="margin-top: 0;"> M107 Hamilton Road, <br>
+                    Mount Vernon, Glasgow G32 9QN, <br>
+                    Scotland.
                 </p>
     
                 <h4 style="margin-bottom: .3rem;"> <font color='goldenrod'>BRANCH OFFICE:</font></h4>
