--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav>
 
         <nav class="nav-3">
-            <a href="home.html" id="important">HOME</a>
+            <a href="index.html" id="important">HOME</a>
             <a href="investment-programs.html">INVESTMENT PROGRAMS</a>
             <a href="why-choose-us.html">WHY CHOOSE US</a>
         </nav>
@@ -167,8 +167,8 @@
     <div id="footer">
         <div>
             <h3><font color='goldenrod'>QUICK LINKS</font></h3>
-            <a href="#home">HOME</a> <br>
-            <a href="#know-more">ABOUT US</a> <br>
+            <a href="index.html">HOME</a> <br>
+            <a href="#">ABOUT US</a> <br>
             <a href="#">FAQS</a> <br>
             <a href="https://wa.me/+19149289425?text=I-would-like-to-get-more-info-about-the-platform" target="_blank">CONTACT US</a>
         </div>
@@ -231,25 +231,11 @@
 
 
 
-<script>
-    let dd = new Date()
-    document.getElementById('major-footer').innerHTML = dd.getFullYear() + ' ' + '&copy All Rights Reserved'
 
-    function scrollToTop() {
-        window.scrollTo({
-            top: 0,
-            behavior: "smooth"
-        })
-    }
-
-    document.getElementById('btn').innerHTML = function btn() {
-        document.getElementsByClassName('nav-3').style.right = '0';
-        document.getElementsByClassName('nav-3').style.left = '0';
-    }
-</script>
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
