--- a/investment-programs.html
+++ b/investment-programs.html
@@ -49,7 +49,7 @@
         </nav>
 
         <nav class="nav-3">
-            <a href="home.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="investment-programs.html"  id="important">INVESTMENT PROGRAMS</a>
             <a href="why-choose-us.html">WHY CHOOSE US</a>
         </nav>
@@ -114,7 +114,7 @@
         <div id="footer">
             <div>
                 <h3><font color='goldenrod'>QUICK LINKS</font></h3>
-                <a href="home.html">HOME</a> <br>
+                <a href="index.html">HOME</a> <br>
                 <a href="#">ABOUT US</a> <br>
                 <a href="#">FAQS</a> <br>
                 <a href="https://wa.me/+19149289425?text=I-would-like-to-get-more-info-about-the-platform" target="_blank">CONTACT US</a>
@@ -176,20 +176,11 @@
     </footer>
 
 
-    <script>
-        let dd = new Date()
-        document.getElementById('major-footer').innerHTML = dd.getFullYear() + ' ' + '&copy All Rights Reserved';
 
-        function scrollToTop() {
-        window.scrollTo({
-            top: 0,
-            behavior: "smooth"
-        })
-    }
-    </script>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="./script.js"></script>
 
 </body>
 </html>
